--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Your Name Portfolio</title>
+  <title>Balaj|Cybersecurity Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header><h1>Your Name</h1><p>Cybersecurity Enthusiast & ICT student</p></header>
+  <header><h1>Balaj_Mubeen</h1><p>Cybersecurity Enthusiast & ICT student</p></header>
   <section><h2>Skills</h2><p>Networking | Linux | Python | Security basics</p></section>
   <section><h2>Projects</h2>
-    <ul><li><a href="https://github.com/your-username/project1">Project1</a></li></ul>
+    <ul>
+        <li><a href="https://github.com/Balaj-dev/KeyLogger">Keylogger</a></li>
+        <li><a href="https://github.com/Balaj-dev/Password_analyser">Password_Analyzer</a></li>
+    </ul>
   </section>
-  <footer><p>Contact: email@example.com | <a href="https://github.com/your-username">GitHub</a></p></footer>
+  <footer><p>Contact: email@example.com | <a href="https://github.com/Balaj-dev">GitHub</a></p></footer>
 </body>
 </html>
