--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>Balaj_Mubeen</h1><p>Cybersecurity Enthusiast & ICT student</p></header>
+  <div id="Side-bar"><h1>Balaj_Mubeen</h1><p>Cybersecurity Enthusiast & ICT student</p></div>
   <section><h2>Skills</h2><p>Networking | Linux | Python | Security basics</p></section>
   <section><h2>Projects</h2>
     <ul>
