--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Balaj|Cybersecurity Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Balaj's Portfolio</title>
 </head>
 <body>
-  <div id="Side-bar"><h1>Balaj_Mubeen</h1><p>Cybersecurity Enthusiast & ICT student</p></div>
-  <section><h2>Skills</h2><p>Networking | Linux | Python | Security basics</p></section>
-  <section><h2>Projects</h2>
-    <ul>
-        <li><a href="https://github.com/Balaj-dev/KeyLogger">Keylogger</a></li>
-        <li><a href="https://github.com/Balaj-dev/Password_analyser">Password_Analyzer</a></li>
-    </ul>
-  </section>
-  <footer><p>Contact: mbalajmubeen@gmail.com| <a href="https://github.com/Balaj-dev">GitHub</a></p></footer>
+
+<header><h1>My Portfolio</h1></header>
+<div class="nav-bar" id="nav-bar"> 
+
+  <a href="Main" id="main-in-nav">
+    <label for="main-in-nav">Main</label>
+  
+  <a href="About me" id="about-me-in-nav">
+    <label for="about-me-in-nav">About me</label>
+  
+  <a href="Projects" id="projects-in-main">
+    <label for="projects-in-main">Projects</label>
+  
+ </div>
+
+<div id="side-bar">
+<img id="my-pic" src="me_photo.jpeg" alt="my photo btw...">
+</div>
+
 </body>
 </html>
