hmmm thinking aobut the layout

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="fonts.googleapis.com" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Balaj's Portfolio</title>
@@ -10,14 +11,20 @@
 
 <header><h1>My Portfolio</h1></header>
 <div class="nav-bar" id="nav-bar"> 
-
+  <h2 id="port-in-nav">My Portfolio</h2>
   <a href="Main" id="main-in-nav">Main</a>
   <a href="About me" id="about-me-in-nav">About me</a>  
   <a href="Projects" id="projects-in-nav">Projects</a>
   
 </div>
 
-<div id="side-bar"></div>
+<div id="main-bar">
+<img src="" id="my-photo" alt="My picture btw..."> 
+<h1 id="my-name">Balaj Mubeen</h1>
+  <p id="main-para">
+</p> 
+</div>
+
 
 </body>
 </html>
