--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div id="main-bar">
-<img src="" id="my-photo" alt="My picture btw..."> 
+<img src="me.jpg" id="my-photo" alt="My picture btw..."> 
 <h1 id="my-name">Balaj Mubeen</h1>
   <p id="main-para">
 </p> 
