--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <img src="me.jpg" id="my-photo" alt="My picture btw..."> 
 <h1 id="my-name">Balaj Mubeen</h1>
   <p id="main-para">
+      CS student focused on cybersecurity and security automation.
+I build Python-based systems around encryption, networking, and secure design.
+Interested in offensive security, protocol design, and real-world threat models.
+Always learning, breaking, and rebuilding things the right way.
 </p> 
 </div>
 
