just added one more line of bio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 I focus on problem-solving, system-level thinking, and understanding how computers work under the hood.
 Experienced in designing and reasoning about secure, reliable software systems.
 Comfortable working in Linux environments and automating tasks with code when needed.
-Certified in IBM System Administration, with a solid grasp of system operations and reliability.
+Certified in Google Cybersecurity and IBM System Administration, with a solid grasp of system operations and reliability.
 Curious by nature, I enjoy exploring complex technical problems and learning beyond formal curricula.
 Interested in cybersecurity, secure communication, and low-level system design.
 Driven by continuous learning and building things with correctness and intent.
