hmmm link to projects

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header><h1>My Portfolio</h1></header>
 <div class="nav-bar" id="nav-bar"> 
   <h2 id="port-in-nav">My Portfolio</h2>
-  <a href="Main" id="main-in-nav">Main</a>
-  <a href="About me" id="about-me-in-nav">About me</a>  
-  <a href="Projects" id="projects-in-nav">Projects</a>
+  <a href="#main-para" id="main-in-nav">Main</a>
+  <a href="#main-para" id="about-me-in-nav">About me</a>
+  <a href="https://github.com/Balaj-dev?tab=repositories" id="projects-in-nav">Projects</a>
   
 </div>
 
